Updated Objects files

--- a/JavaScript/5_Objects/index5.html
+++ b/JavaScript/5_Objects/index5.html
@@ -5,6 +5,7 @@
         <title>Objects</title>
     </head>
     <body>
-        <script src="/JavaScript/5_Objects/index.js"></script>
+        <!-- <script src="/JavaScript/5_Objects/script5.js"></script> -->
+        <script src="/JavaScript/5_Objects/script-Constructor.js"></script>
     </body>
 </html>
