More about Method and practice

--- a/JavaScript/10_Array/index.html
+++ b/JavaScript/10_Array/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/JavaScript/10_Array/script.js"></script>
+    <!-- <script src="/JavaScript/10_Array/script.js"></script> -->
+    <!-- <script src="/JavaScript/10_Array/ArrayMethod.js"></script> -->
+    <!-- <script src="/JavaScript/10_Array/MapMethod.js"></script> -->
+    <!-- <script src="/JavaScript/10_Array/ReduceMethod.js"></script> -->
+    <!-- <script src="/JavaScript/10_Array/IncludeMethod.js"></script> -->
+    <!-- <script src="/JavaScript/10_Array/ArrayToObject.js"></script> -->
+    <!-- <script src="/JavaScript/10_Array/RatingFilm.js"></script> -->
 </body>
 </html>
