Updated DOM Events

--- a/JavaScript/6_DOM events/index6.html
+++ b/JavaScript/6_DOM events/index6.html
@@ -8,6 +8,9 @@
     <title>DOM</title>
 </head>
 <body>
+    <input placeholder="Write something" type="text">
+    <input type="checkbox">
+
     <h1>DOM event 1</h1>
     <h1>DOM event 2</h1>
     <h1>DOM event 3</h1>
