Updated method and example

--- a/JavaScript/16_Promise/Promise.html
+++ b/JavaScript/16_Promise/Promise.html
@@ -7,9 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul id="comment-block">
+        
+    </ul>
 </body>
 <!-- <script src="/JavaScript/16_Promise/sync_async.js"></script> -->
 <!-- <script src="/JavaScript/16_Promise/pain.js"></script> -->
-<script src="/JavaScript/16_Promise/concept.js"></script>
+<!-- <script src="/JavaScript/16_Promise/concept.js"></script> -->
+<!-- <script src="/JavaScript/16_Promise/chain.js"></script> -->
+<!-- <script src="/JavaScript/16_Promise/Callback_Hell_example.js"></script> -->
+<!-- <script src="/JavaScript/16_Promise/method.js"></script> -->
+<script src="/JavaScript/16_Promise/Example.js"></script>
 </html>
